--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web-cakery",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://martinpersson-lexicon.github.io/WebCakery.git",
+  "homepage": "https://martinpersson-lexicon.github.io/WebCakery",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -14,6 +14,7 @@
     "react-router-dom": "^7.9.5",
     "web-vitals": "^2.1.4"
   },
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
