--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-cakery",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://martinpersson-lexicon.github.io/web-cakery",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
